# writing-companion

./: .env  .gitignore  PROJECT_CONTEXT.md  README.md  cli.py  pyproject.toml
writing_bot/: article_manager.py  conversation_workflow.py  gemini_client.py  graph_schema.py  main.py  markdown_analysis.py  markdown_ingest.py  session_manager.py  tools.py  workflow.py
writing_bot/articles/ai_writing_assistant/: REACT_AGENT_GUIDE.md  article.md  outline.md
writing_bot/articles/consulting_dos_and_donts/: article.md  outline.md
writing_bot/articles/openflow_discovery/: article.md  outline.md
