[project]
name = "writing-bot"
version = "0.1.0"
description = "A CLI tool to help you write articles with Gemini AI and git versioning"
authors = [
    {name = "Stephane Burwash",email = "stefburwash@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "python-dotenv (>=1.0.0,<2.0.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "langgraph (>=0.2.0,<1.0.0)",
    "langchain-core (>=0.3.0,<1.0.0)",
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
